--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Ping Dashboard</title>
+    <title>Noria</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but Ping Dashboard doesn't work properly without JavaScript enabled. Please
+        >We're sorry but this web app doesn't work properly without JavaScript enabled. Please
         enable it to continue.</strong
       >
     </noscript>
     <div id="loading-bg">
       <div class="loading-logo">
-        <img src="/logo.svg" alt="Logo" width="80"/>
+        <img src="/logo.png" alt="Logo" width="80"/>
       </div>
       <div class="loading">
         <div class="effect-1 effects"></div>
@@ -33,15 +33,5 @@
       </div>
     </div>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-238887-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-238887-1');
-    </script>
   </body>
 </html>
